generated/checkers/gen/AllGen-UAF-7decd1f5904a489d3ccdcf131972f94645681689/build_logs/syntax-repair-00/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘llvm::SmallVector<const clang::ento::MemRegion*, 4> {anonymous}::getAllAliases(clang::ento::ProgramStateRef, const clang::ento::MemRegion*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:127:53: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type’ {aka ‘const clang::ento::MemRegion* const*’} to ‘const clang::ento::MemRegion*’ in initialization
  127 |   if (const MemRegion *Fwd = State->get<PtrAliasMap>(R)) {
      |                              ~~~~~~~~~~~~~~~~~~~~~~~^~~
      |                                                     |
      |                                                     clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type {aka const clang::ento::MemRegion* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:191:54: error: invalid conversion from ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const char*> >::lookup_type’ {aka ‘const char* const*’} to ‘const char**’ [-fpermissive]
  191 |     const char **ReleasedBy = State->get<ReleasedMap>(Base);
      |                               ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
      |                                                      |
      |                                                      clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const char*> >::lookup_type {aka const char* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkLocation(clang::ento::SVal, bool, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:208:52: error: invalid conversion from ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const char*> >::lookup_type’ {aka ‘const char* const*’} to ‘const char**’ [-fpermissive]
  208 |   const char **ReleasedBy = State->get<ReleasedMap>(Base);
      |                             ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
      |                                                    |
      |                                                    clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const char*> >::lookup_type {aka const char* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:241:56: error: invalid conversion from ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const char*> >::lookup_type’ {aka ‘const char* const*’} to ‘const char**’ [-fpermissive]
  241 |   if (const char **ReleasedBy = State->get<ReleasedMap>(LHSReg)) {
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
      |                                                        |
      |                                                        clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const char*> >::lookup_type {aka const char* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:246:56: error: invalid conversion from ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const char*> >::lookup_type’ {aka ‘const char* const*’} to ‘const char**’ [-fpermissive]
  246 |   if (const char **ReleasedBy = State->get<ReleasedMap>(RHSReg)) {
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
      |                                                        |
      |                                                        clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const char*> >::lookup_type {aka const char* const*}
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
